<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="IPC" Id="{decfe3e6-7883-46e0-8b4d-1d2f7d6d2416}">
    <Declaration><![CDATA[TYPE IPC:
STRUCT
	MesAlarmCode		: WORD;	(* (NA) Internal Akuo AlarmCode  *)
	MesWarningCode		: WORD; (* (NA) Internal Akuo WarningCode*)
	MesEventCode		: WORD; (* (NA) Internal Akuo EventCode	 *)
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>

